--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Index Page</title>
+    <title>Contact Page</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&amp;display=swap&amp;subset=cyrillic" rel="stylesheet"/>
     <link href="./css/slick.css" rel="stylesheet"/>
     <link href="./css/slick-theme.css" rel="stylesheet"/>
@@ -15,11 +15,12 @@
     <header class="header">
       <div class="container">
         <div class="header__row row no-gutters align-items-center justify-content-between">
-          <div class="header__col"><a class="header__logo" href="/" title="Компания ИНКАМ системный интегратор"></a></div>
-          <div class="header__col">
+          <div class="header__col header__col_nav">
             <svg class="navbar-toggle" id="nav" viewBox="0 0 24.00 24.00" xml:space="preserve">
               <path fill="#000000" fill-opacity="1" stroke-width="0.2" stroke-linejoin="round" d="M 3,8L 3,7L 20,7L 20,8L 3,8 Z M 20,12L 20,13L 3,13L 3,12L 20,12 Z M 3,17L 20,17L 20,18L 3,18L 3,17 Z"></path>
-            </svg>
+            </svg><a class="header__logo" href="/" title="Компания ИНКАМ системный интегратор"></a>
+          </div>
+          <div class="header__col">
             <nav class="navbar">
               <div class="navbar__item"><a class="navbar__link" href="#">Услуги</a></div>
               <div class="navbar__item"><a class="navbar__link" href="#">Продукты</a></div>
@@ -43,21 +44,42 @@
         </div>
       </div>
     </header>
+    <div class="navbar-mobile" id="navMobile">
+      <nav class="navbar">
+        <div class="navbar__item"><a class="navbar__link" href="#">Услуги</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Продукты</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Проекты</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">О компании</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Контакты</a></div>
+      </nav>
+      <form class="form form_search" action="">
+        <input class="input input_search" placeholder="Поиск по сайту" type="search"/>
+        <input class="btn" type="submit"/>
+      </form>
+    </div>
     <main>
       <section class="block-contact">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-3">
+            <div class="col-3 col-sm-12 col-lg-12 col-xl-4">
               <h1 class="h3">Контакты</h1>
-              <p class="text-uppercase text-bold">Адрес</p>
-              <p>г. Москва, улица Правды дом 24</p>
-              <p class="text-uppercase text-bold">КАК СВЯЗАТЬСЯ</p>
-              <p class="mb-0">Телефон: <a class="link-inverse" href="tel:+7(495) 792-81-27">+7(495) 792-81-27</a></p>
-              <p>E-mail: <a class="link-inverse" href="mailto:info@inkam.org.ru">info@inkam.org.ru</a></p>
-              <p class="text-uppercase text-bold">ВРЕМЯ РАБОТЫ</p>
-              <p class="mb-0">ПН-ПТ с 9.00 до 18.00</p>
+              <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                  <p class="text-uppercase text-bold">Адрес</p>
+                  <p>г. Москва, улица Правды дом 24</p>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                  <p class="text-uppercase text-bold">КАК СВЯЗАТЬСЯ</p>
+                  <p class="mb-0">Телефон: <a class="link-inverse" href="tel:+7(495) 792-81-27">+7(495) 792-81-27</a></p>
+                  <p>E-mail: <a class="link-inverse" href="mailto:info@inkam.org.ru">info@inkam.org.ru</a></p>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                  <p class="text-uppercase text-bold">ВРЕМЯ РАБОТЫ</p>
+                  <p>ПН-ПТ с 9.00 до 18.00</p>
+                </div>
+              </div>
             </div>
-            <div class="col-9">
+            <div class="col-9 col-sm-12 mt-lg-40 col-lg-12 col-xl-8">
               <div class="map"><iframe src="https://yandex.ru/map-widget/v1/-/CGcyf0YI" width="100%" height="380" frameborder="0" allowfullscreen="false"></iframe></div>
             </div>
           </div>
@@ -66,18 +88,18 @@
       <section class="bg-gradient content">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-4">
+            <div class="col-4 col-sm-12 col-md-12 col-lg-8">
               <p class="content__title">У вас остались вопросы?</p>
               <p class="mb-0">Укажите контактные данные, и  менеджер компании поможет вам составить индивидуальную смету и подобрать все необходимые материалы</p>
             </div>
-            <div class="col-3">
+            <div class="col-3 col-sm-12 mt-lg-40 col-md-6 col-lg-6">
               <form class="form" action="">
                 <input class="input" type="text" placeholder="Ваше имя"/>
                 <input class="input phone" type="number" placeholder="Телефон"/>
                 <input class="btn btn_default btn_full-width text-bold" type="submit" value="Нужна консультация"/>
               </form>
             </div>
-            <div class="col-5">
+            <div class="col-5 col-sm-12 mt-sm-40 col-md-6 col-lg-6">
               <div class="content__contact">
                 <p class="text-small mb-0">Корр. счет: 30101810145250000974 в ГУ Банка России по ЦФО</p>
                 <p class="text-small mb-0">Р/С: 30232810100000000004</p>
@@ -118,10 +140,10 @@
     <div class="footer-info">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 col-sm-12 text-sm-center">
             <p class="mb-0 text-small">© 2019. Все права защищены</p>
           </div>
-          <div class="col-6 text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
+          <div class="col-6 col-sm-12 text-sm-center text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
         </div>
       </div>
     </div>
