--- a/public/product.html
+++ b/public/product.html
@@ -15,11 +15,12 @@
     <header class="header">
       <div class="container">
         <div class="header__row row no-gutters align-items-center justify-content-between">
-          <div class="header__col"><a class="header__logo" href="/" title="Компания ИНКАМ системный интегратор"></a></div>
-          <div class="header__col">
+          <div class="header__col header__col_nav">
             <svg class="navbar-toggle" id="nav" viewBox="0 0 24.00 24.00" xml:space="preserve">
               <path fill="#000000" fill-opacity="1" stroke-width="0.2" stroke-linejoin="round" d="M 3,8L 3,7L 20,7L 20,8L 3,8 Z M 20,12L 20,13L 3,13L 3,12L 20,12 Z M 3,17L 20,17L 20,18L 3,18L 3,17 Z"></path>
-            </svg>
+            </svg><a class="header__logo" href="/" title="Компания ИНКАМ системный интегратор"></a>
+          </div>
+          <div class="header__col">
             <nav class="navbar">
               <div class="navbar__item"><a class="navbar__link" href="#">Услуги</a></div>
               <div class="navbar__item"><a class="navbar__link" href="#">Продукты</a></div>
@@ -43,6 +44,19 @@
         </div>
       </div>
     </header>
+    <div class="navbar-mobile" id="navMobile">
+      <nav class="navbar">
+        <div class="navbar__item"><a class="navbar__link" href="#">Услуги</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Продукты</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Проекты</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">О компании</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Контакты</a></div>
+      </nav>
+      <form class="form form_search" action="">
+        <input class="input input_search" placeholder="Поиск по сайту" type="search"/>
+        <input class="btn" type="submit"/>
+      </form>
+    </div>
     <main>
       <section class="content">
         <div class="container">
@@ -60,7 +74,7 @@
           </div>
         </div>
       </section>
-      <section class="content">
+      <section class="content pt-0">
         <div class="container">
           <p class="heading heading_small">Ключевые Вендоры компании Инкам</p>
           <div class="d-flex justify-content-between align-items-center">
@@ -80,10 +94,10 @@
       <section class="block-content">
         <div class="container">
           <div class="row">
-            <div class="col-5">
-              <p class="mb-0 h3">Комплексная поставка компьютерного оборудования для бизнеса</p>
+            <div class="col-5 col-md-12 col-lg-8 mb-lg-40">
+              <p class="h3">Комплексная поставка компьютерного оборудования для бизнеса</p>
             </div>
-            <div class="col-6"> 
+            <div class="col-6 col-md-12 col-lg-9">
               <p class="mb-0 text-dark-blue">
                 Мы предлагаем исчерпывающий ассортимент IT-решений для бизнеса, что позволяет подобрать оптимальное техническое оснащение, которое поможет достигать 
                 поставленных целей. Наши инженеры разрабатывают и интегрируют в бизнес-процессы 
@@ -97,31 +111,31 @@
       <section class="vendor">
         <div class="container">
           <div class="row">
-            <div class="col-4">
-              <div class="service vendor__item"><a class="vendor__modal" data-fancybox="test1" data-src="#test" href="javascript:;">?</a>
+            <div class="col-4 col-sm-12 col-md-9">
+              <div class="service service_first-child vendor__item"><a class="vendor__modal" data-fancybox="test1" data-src="#test" href="javascript:;">?</a>
                 <div class="row align-items-center">
-                  <div class="col-4"><img class="img-fluid" src="../img/logo/1.jpg"/></div>
-                  <div class="col-8">
+                  <div class="col-4 col-lg-12 col-md-4 mb-lg-20 mb-md-0"><img class="img-fluid" src="../img/logo/1.jpg"/></div>
+                  <div class="col-8 col-lg-12 col-md-8">
                     <p class="vendor__title">Вендор 1</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-sm-12 col-md-9 mt-md-20 mt-sm-0">
               <div class="service vendor__item"><a class="vendor__modal" data-fancybox="test2" data-src="#test" href="javascript:;">?</a>
                 <div class="row align-items-center">
-                  <div class="col-4"><img class="img-fluid" src="../img/logo/2.jpg"/></div>
-                  <div class="col-8">
+                  <div class="col-4 col-lg-12 col-md-4 mb-lg-20 mb-md-0"><img class="img-fluid" src="../img/logo/2.jpg"/></div>
+                  <div class="col-8 col-lg-12 col-md-8">
                     <p class="vendor__title">Вендор 2</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-sm-12 col-md-9 mt-md-20 mt-sm-0">
               <div class="service vendor__item"><a class="vendor__modal" data-fancybox="test3" data-src="#test" href="javascript:;">?</a>
                 <div class="row align-items-center">
-                  <div class="col-4"><img class="img-fluid" src="../img/logo/3.jpg"/></div>
-                  <div class="col-8">
+                  <div class="col-4 col-lg-12 col-md-4 mb-lg-20 mb-md-0"><img class="img-fluid" src="../img/logo/3.jpg"/></div>
+                  <div class="col-8 col-lg-12 col-md-8">
                     <p class="vendor__title">Вендор 3</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
                   </div>
                 </div>
@@ -146,19 +160,19 @@
             </select>
           </form>
           <div class="row">
-            <div class="col-3">
+            <div class="col-3 col-sm-12 col-md-6 col-lg-4">
               <div class="solution">
                 <div class="solution__image"><img class="solution__vendor-logo" src="../img/logo/4.jpg"/></div>
                 <div class="solution__info"><span class="text-bold">Вендор 1</span><span> / </span><span>Сфера 1</span></div><a class="solution__title" href="/">Решение 1</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 col-sm-12 col-md-6 col-lg-4">
               <div class="solution">
                 <div class="solution__image"><img class="solution__vendor-logo" src="../img/logo/5.jpg"/></div>
                 <div class="solution__info"><span class="text-bold">Вендор 1</span><span> / Сфера 1</span></div><a class="solution__title" href="/">Решение 2</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 col-sm-12 col-md-6 col-lg-4">
               <div class="solution">
                 <div class="solution__image"><img class="solution__vendor-logo" src="../img/logo/6.jpg"/></div>
                 <div class="solution__info"><span class="text-bold">Вендор 1</span><span> / Сфера 1</span></div><a class="solution__title" href="/">Решение 2</a>
@@ -182,7 +196,7 @@
             </nav>
           </div>
           <div class="footer__col">
-            <ul class="contacts contacts_inline">
+            <ul class="contacts">
               <li class="contacts__item"><a class="contacts__link contacts__link_email" href="mailto:info@inkam.org.ru">info@inkam.org.ru</a></li>
               <li class="contacts__item"><a class="contacts__link contacts__link_phone" href="tel:+7(495) 792-81-27">+7(495) 792-81-27</a></li>
             </ul>
@@ -193,10 +207,10 @@
     <div class="footer-info">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 col-sm-12 text-sm-center">
             <p class="mb-0 text-small">© 2019. Все права защищены</p>
           </div>
-          <div class="col-6 text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
+          <div class="col-6 col-sm-12 text-sm-center text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
         </div>
       </div>
     </div>
