--- a/public/project.html
+++ b/public/project.html
@@ -15,11 +15,12 @@
     <header class="header">
       <div class="container">
         <div class="header__row row no-gutters align-items-center justify-content-between">
-          <div class="header__col"><a class="header__logo" href="/" title="Компания ИНКАМ системный интегратор"></a></div>
-          <div class="header__col">
+          <div class="header__col header__col_nav">
             <svg class="navbar-toggle" id="nav" viewBox="0 0 24.00 24.00" xml:space="preserve">
               <path fill="#000000" fill-opacity="1" stroke-width="0.2" stroke-linejoin="round" d="M 3,8L 3,7L 20,7L 20,8L 3,8 Z M 20,12L 20,13L 3,13L 3,12L 20,12 Z M 3,17L 20,17L 20,18L 3,18L 3,17 Z"></path>
-            </svg>
+            </svg><a class="header__logo" href="/" title="Компания ИНКАМ системный интегратор"></a>
+          </div>
+          <div class="header__col">
             <nav class="navbar">
               <div class="navbar__item"><a class="navbar__link" href="#">Услуги</a></div>
               <div class="navbar__item"><a class="navbar__link" href="#">Продукты</a></div>
@@ -43,64 +44,77 @@
         </div>
       </div>
     </header>
+    <div class="navbar-mobile" id="navMobile">
+      <nav class="navbar">
+        <div class="navbar__item"><a class="navbar__link" href="#">Услуги</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Продукты</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Проекты</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">О компании</a></div>
+        <div class="navbar__item"><a class="navbar__link" href="#">Контакты</a></div>
+      </nav>
+      <form class="form form_search" action="">
+        <input class="input input_search" placeholder="Поиск по сайту" type="search"/>
+        <input class="btn" type="submit"/>
+      </form>
+    </div>
     <main>
       <section class="block-project">
         <div class="container">
           <div class="row no-gutters">
-            <div class="col-6">
+            <div class="col-6 col-sm-12 col-md-12 col-lg-6">
               <div class="block-project__col">
                 <h1>Реализованные проекты</h1>
                 <p>Lorem ipsum dolor sit amet. Libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit. Eveniet, ut enim ipsam voluptatem, quia voluptas sit, amet, consectetur, adipisci velit. Sunt in culpa, qui in ea commodi autem quibusdam.</p>
               </div>
             </div>
-            <div class="col-6 d-flex">
-              <div class="service service_project service_highlight service_bb-hide">
-                <div class="row align-items-center">
-                  <div class="col-4"><img class="img-fluid service__img" src="../img/rzd.jpg"/></div>
-                  <div class="col-8"><a class="service__title text-bold h5" href="#">Комплексная реализация инфраструктуры</a>
+            <div class="col-6 d-flex col-sm-12 col-md-6 col-lg-6">
+              <div class="service service_project service_highlight service_bb-hide service_first-child">
+                <div class="row align-items-center text-lg-center">
+                  <div class="col-4 col-lg-12"><img class="img-fluid service__img" src="../img/rzd.jpg"/></div>
+                  <div class="col-8 col-lg-12"><a class="service__title text-bold" href="#">Комплексная реализация инфраструктуры</a>
                     <p class="service__company">Головной МФЦ</p>
                     <p class="service__location mb-0">г. Йошкар-Ола, республика Марий Эл</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project text-center"><img class="img-fluid service__img" src="../img/RT_full_logo.png"/><a class="service__title text-bold h6" href="#">Комплексные решения</a>
                 <p class="service__company">Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»</p>
                 <p class="service__location mb-0">г. Новосибирск</p>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project service_bl-hide text-center"><img class="img-fluid service__img" src="../img/logo.png"/><a class="service__title text-bold h6" href="#">Комплексные решения</a>
                 <p class="service__company">ПАО «Вымпелком»</p>
                 <p class="service__location mb-0">г. Ярославль, г. Кострома, г. Иваново</p>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project service_bl-hide text-center"><img class="img-fluid service__img" src="../img/transmash_logo.png"/><a class="service__title text-bold h6" href="#">Поставка оборудования</a>
                 <p class="service__company">Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»</p>
                 <p class="service__location mb-0">г. Санкт-Петербург</p>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project service_bl-hide text-center"><img class="img-fluid service__img" src="../img/rzd.jpg"/><a class="service__title text-bold h6" href="#">Поставка оборудования и развитие сети</a>
                 <p class="service__company">Макрорегиональный филиал «Центр» ПАО «Ростелеком»</p>
                 <p class="service__location mb-0">г. Москва</p>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project service_bt-hide text-center"><img class="img-fluid service__img" src="../img/RT_full_logo.png"/><a class="service__title text-bold h6" href="#">Комплексные решения</a>
                 <p class="service__company">Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»</p>
                 <p class="service__location mb-0">г. Новосибирск</p>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project service_bt-hide service_bl-hide text-center"><img class="img-fluid service__img" src="../img/logo.png"/><a class="service__title text-bold h6" href="#">Комплексные решения</a>
                 <p class="service__company">ПАО «Вымпелком»</p>
                 <p class="service__location mb-0">г. Ярославль, г. Кострома, г. Иваново</p>
               </div>
             </div>
-            <div class="col-3 d-flex">
+            <div class="col-3 d-flex col-sm-12 col-md-6 col-lg-6 col-xl-4">
               <div class="service service_project service_bt-hide service_bl-hide text-center"><img class="img-fluid service__img" src="../img/transmash_logo.png"/><a class="service__title text-bold h6" href="#">Поставка оборудования</a>
                 <p class="service__company">Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»</p>
                 <p class="service__location mb-0">г. Санкт-Петербург</p>
@@ -124,7 +138,7 @@
             </nav>
           </div>
           <div class="footer__col">
-            <ul class="contacts contacts_inline">
+            <ul class="contacts">
               <li class="contacts__item"><a class="contacts__link contacts__link_email" href="mailto:info@inkam.org.ru">info@inkam.org.ru</a></li>
               <li class="contacts__item"><a class="contacts__link contacts__link_phone" href="tel:+7(495) 792-81-27">+7(495) 792-81-27</a></li>
             </ul>
@@ -135,10 +149,10 @@
     <div class="footer-info">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 col-sm-12 text-sm-center">
             <p class="mb-0 text-small">© 2019. Все права защищены</p>
           </div>
-          <div class="col-6 text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
+          <div class="col-6 col-sm-12 text-sm-center text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
         </div>
       </div>
     </div>
