--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
             </div>
             <div class="col-9 col-sm-12 col-md-7 col-lg-8">
               <div class="slider slider_logo">
-                <div class="slider__item"><img class="img-fluid" src="../img/RT_full_logo.png"/></div>
-                <div class="slider__item"><img class="img-fluid" src="../img/logo.png"/></div>
-                <div class="slider__item"><img class="img-fluid" src="../img/transmash_logo.png"/></div>
-                <div class="slider__item"><img class="img-fluid" src="../img/rzd.jpg"/></div>
+                <div class="slider__item"><img class="img-fluid" data-lazy="../img/RT_full_logo.png"/></div>
+                <div class="slider__item"><img class="img-fluid" data-lazy="../img/logo.png"/></div>
+                <div class="slider__item"><img class="img-fluid" data-lazy="../img/transmash_logo.png"/></div>
+                <div class="slider__item"><img class="img-fluid" data-lazy="../img/rzd.jpg"/></div>
               </div>
             </div>
           </div>
@@ -102,42 +102,49 @@
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_first-child">
                 <div class="service__title">Сетевая инфраструктура</div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_bl-hide">
                 <div class="service__title">Унифицированные коммуникации</div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn">
                 <div class="service__title">IT-решения</div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_bl-hide service_bt-hide">
                 <div class="service__title">Комплексные системы мониторинга и&nbsp;анализа</div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_bl-hide service_bt-hide">
                 <div class="service__title">Проектирование и модернизация <span class="text-nowrap">IT-инфраструктуры</span></div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_bt-hide">
                 <div class="service__title">Управление комплексными проектами</div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_bl-hide service_bt-hide">
                 <div class="service__title">Сервисная поддержка</div>
+                <div class="service__info">?</div>
               </div>
             </div>
             <div class="col-4 col-sm-12 col-md-6 d-flex">
               <div class="service service_modal-btn service_bl-hide service_bt-hide">
                 <div class="service__title">Проектирование и&nbsp;модернизация инженерной инфраструктуры ЦОД</div>
-                <div class="service__content"></div>
+                <div class="service__info">?</div>
               </div>
             </div>
           </div>
@@ -272,7 +279,7 @@
             </nav>
           </div>
           <div class="footer__col">
-            <ul class="contacts contacts_inline">
+            <ul class="contacts">
               <li class="contacts__item"><a class="contacts__link contacts__link_email" href="mailto:info@inkam.org.ru">info@inkam.org.ru</a></li>
               <li class="contacts__item"><a class="contacts__link contacts__link_phone" href="tel:+7(495) 792-81-27">+7(495) 792-81-27</a></li>
             </ul>
