--- a/public/product.html
+++ b/public/product.html
@@ -116,7 +116,7 @@
                 <div class="row align-items-center">
                   <div class="col-4 col-lg-12 col-md-4 mb-lg-20 mb-md-0"><img class="img-fluid" src="../img/logo/1.jpg"/></div>
                   <div class="col-8 col-lg-12 col-md-8">
-                    <p class="vendor__title">Вендор 1</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
+                    <p class="vendor__title">Вендор 1</p>
                   </div>
                 </div>
               </div>
